--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,26 @@
+name: C++ CI
+
+on:
+  push:
+  pull_request:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y g++ curl libcurl4-openssl-dev nlohmann-json3-dev
+
+      - name: Build project
+        run: |
+          g++ -std=c++17 -Wall -Wextra main.cpp HtmlResponds.cpp DeepCleaner.cpp -o run -lcurl
+
+      - name: Run binary
+        run: ./run
 
