--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add cardamom.json
+          git add cardamom_data.json
           git commit -m "Update cardamom_data.json [skip ci]" || echo "No changes to commit"
           git push
         env:
