--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add cardamom_data.json
           git commit -m "Update cardamom_data.json [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{jittinabraham/web-scraping-cpp}}.git HEAD:main
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com:${{jittinabraham/web-scraping-cpp}}.git HEAD:main
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
