--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,10 @@ jobs:
     steps:
       # Step 1: Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: true
+        
 
       # Step 2: Install dependencies
       - name: Install dependencies
@@ -40,7 +43,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add cardamom_data.json
           git commit -m "Update cardamom_data.json [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.git HEAD:main
+          git push origin HEAD:main
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
