--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add cardamom_data.json
-          git commit -m "Update cardamom_data.json [skip ci]" || echo "No changes to commit"
+          git diff --cached --quiet || (git commit -m "Update cardamom_data.json [skip ci]" && git push origin HEAD:main)
           git push origin HEAD:main
 
         env:
