--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
         
 
       # Step 2: Install dependencies
